Shenzhen: Fix spacing on small screen; disable touch on game area

--- a/assets/projects/shenzhen/game.scss
+++ b/assets/projects/shenzhen/game.scss
@@ -22,10 +22,16 @@ $border-3: lighten($default-background, 32.25%);
     min-width: 880px;
     max-width: 880px;
 
+    padding: 10px;
+    border: 1px solid $border-1;
+
+    touch-action: none;
 
     @media screen and (max-width: 880px) {
         min-width: 600px;
         max-width: 600px;
+
+        padding: 2px;
     }
 
     &,
@@ -36,6 +42,10 @@ $border-3: lighten($default-background, 32.25%);
     & .controls .input {
         margin: 0 0.5em;
         padding: 0;
+
+        @media screen and (max-width: 880px) {
+            margin-top: 0.5rem;
+        }
     }
 }
 
@@ -73,6 +83,10 @@ $border-3: lighten($default-background, 32.25%);
         padding-top: 5px;
 
         margin: 0;
+
+        @media screen and (max-width: 880px) {
+            height: 130px;
+        }
 
         & .col {
             min-height: 100%;
